# bliq

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.bak  Dockerfile.dev  METADATA_COMPARISON.md  METADATA_STORAGE.md  README.md  build.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  init.sh  ipython_config.py
data/: metadata.db  metastore.db
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: DatasetDetails.css  DatasetDetails.jsx  DatasetList.css  DatasetList.jsx
src/bliq/: __init__.py  cli.py  client.py  datastore.py  main.py  manager.py  metastore.py
src/bliq/migrations/: __init__.py  runner.py
src/bliq/migrations/versions/: 001_initial_schema.sql
tests/: test_client_server.py
