[project]
name = "bliq"
version = "0.1.0"
description = "Dataset catalog with versioned storage - Python client and optional server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bliq Contributors"}
]
keywords = ["dataset", "catalog", "versioning", "data-management", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

# Minimal client dependencies (always installed)
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
# Server dependencies
server = [
    "fastapi>=0.119.1",
    "uvicorn>=0.38.0",
    "peewee>=3.18.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

# Storage backend options
postgresql = [
    "psycopg2-binary>=2.9.0",
]

s3 = [
    "boto3>=1.34.0",
]

azure = [
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
]

# Development dependencies
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.4.1",
    "ruff>=0.13.1",
    "httpx>=0.27.0",  # For testing
]

# Convenience bundles
all = [
    "bliq[server,postgresql,s3,azure]",
]

[project.scripts]
bliq = "bliq.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/bliq"
Documentation = "https://github.com/yourusername/bliq"
Repository = "https://github.com/yourusername/bliq"
Issues = "https://github.com/yourusername/bliq/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bliq"]
